# nvidia-video-codec-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
nvidia-video-codec-sys/: .gitignore  Cargo.toml  build.rs
nvidia-video-codec-sys/src/: lib.rs
src/: lib.rs  macros.rs
src/cuda/: context.rs  device.rs
src/ffi/: mod.rs
